# scrutinize

./: LICENSE  README.md  scrutinize.cabal  tut-pandoc.cabal
src/: Main.hs
src/Text/Pandoc/: Lines.hs  Scrutinize.hs  Tut.hs
src/Text/Pandoc/Scrutinize/: Lines.hs
test/: compiles.md  no-compile.md
