name:                tut-pandoc
version:             0.1.0.0
synopsis:            Pandoc filter in the spirit of the Scala tut documentation tool.
description:         Pandoc filter in the spirit of the Scala tut (https://github.com/tpolecat/tut) documentation tool.
homepage:            https://github.com/adelbertc/tut-pandoc
license:             Apache-2.0
license-file:        LICENSE
author:              Adelbert Chang
maintainer:          adelbertc@gmail.com
copyright:           2017 Adelbert Chang
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Pandoc.Tut
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , pandoc >= 1.19 && < 1.20
                     , pandoc-types >= 1.17 && < 1.18
                     , hint >= 0.6 && < 0.7
                     , temporary >= 1.2 && < 1.3
                     , directory >= 1.3 && < 1.4
  default-language:    Haskell2010

executable tut-pandoc-exe
  main-is:             src/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , tut-pandoc
                     , pandoc-types >= 1.17 && < 1.18
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adelbertc/tut-pandoc
